[chore] 아이콘 및 메타이미지 추가

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/logo.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>BoB Stone</title>
+
+    <meta property="og:title" content="BoB Stone - BoB 기반 하스스톤 카드 게임" />
+    <meta
+      property="og:description"
+      content="Best Of Best 14기 보안제품 인원들로 구성한 카드 게임"
+    />
+    <meta property="og:image" content="http://bobstone.kro.kr/og-image.jpg" />
+    <meta property="og:url" content="http://bobstone.kro.kr/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
